--- a/demo-customer/src/main/resources/application.properties
+++ b/demo-customer/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.dynamic.datasource.mysql0411.url=jdbc:mysql://hadoop102:3306/user_profile_manager0411?characterEncoding=utf-8&useSSL=false
+spring.datasource.dynamic.datasource.mysql0411.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.mysql0411.username=root
+spring.datasource.dynamic.datasource.mysql0411.password=000000
+
+
+
+spring.datasource.dynamic.datasource.mysql0425.url=jdbc:mysql://hadoop102:3306/user_profile_manager0425?characterEncoding=utf-8&useSSL=false
+spring.datasource.dynamic.datasource.mysql0425.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.mysql0425.username=root
+spring.datasource.dynamic.datasource.mysql0425.password=000000
