--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@
 server.port=80
 
 #\u7528\u4E8E\u753B\u50CF\u7BA1\u7406\u5E73\u53F0\u7684\u6570\u636E
-spring.datasource.dynamic.datasource.mysql.url=jdbc:mysql://hadoop102:3306/user_profile_manager0411?characterEncoding=utf-8&useSSL=false
+spring.datasource.dynamic.datasource.mysql.url=jdbc:mysql://172.31.15.7:3306/user_profile_manager?characterEncoding=utf-8&useSSL=false
 spring.datasource.dynamic.datasource.mysql.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.dynamic.datasource.mysql.username=root
-spring.datasource.dynamic.datasource.mysql.password=000000
+spring.datasource.dynamic.datasource.mysql.password=Xnetworks@c0M
 
 
 #\u7528\u4E8E\u8FDE\u63A5clickhouse \u4FDD\u5B58\u6807\u7B7E\u8BA1\u7B97\u7ED3\u679C \u548C \u4EBA\u7FA4\u5305    \u5982\u679C\u8FD9\u91CC\u6CA1\u88C5clickhouse \u8FD9\u91CC\u53EF\u4EE5\u5148\u6CE8\u6389
-spring.datasource.dynamic.datasource.clickhouse.url=jdbc:clickhouse://hadoop102:8123/user_profile0411
-spring.datasource.dynamic.datasource.clickhouse.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
+#spring.datasource.dynamic.datasource.clickhouse.url=jdbc:clickhouse://hadoop102:8123/user_profile0411
+#spring.datasource.dynamic.datasource.clickhouse.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
 
 #\u753B\u50CF\u5E73\u53F0\u4E0A\u4F20\u5230hdfs\u7684\u6587\u4EF6\u5730\u5740\u548C\u8DEF\u5F84
-hdfs.url=hdfs://hadoop102:8020
-hdfs.username=atguigu
+hdfs.url=hdfs://172.31.12.23:8020
+hdfs.username=hadoop
 hdfs.filedir=/user_profile_manage
 
 #\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u7684\u9650\u5236\uFF0C\u5982\u679C\u6709\u8D85\u5927jar\u5305\u53EF\u4EE5\u8C03\u6574
@@ -25,7 +25,7 @@ spring.servlet.multipart.max-request-size=100MB
 mybatis-plus.global-config.db-config.field-strategy=not_null
 
 #\u63D0\u4EA4\u8FDC\u7A0B\u670D\u52A1\u7684 \u4E4B\u540E\u90E8\u7F72\u8FDC\u7A0Bspark\u63D0\u4EA4\u5668\u7684\u5730\u5740
-spark.rest.submitter.url=http://hadoop102:8266/spark-submit
+spark.rest.submitter.url=http://172.31.12.23:8266/spark-submit
 
 #\u65E5\u5FD7\u7EA7\u522B
 #logging.level.root=error
